@@ -1,7 +1,8 @@
 2004-02-26  ujwal
 
 	* Fixed a couple of emulation problems with reverse video on 
-	  OpenVMS systems in scrollDown and selectGraphicRendition.
+	  OpenVMS systems in scrollDown and scrollUp. New lines now have 
+	  default fg and bg.
 
 2004-02-25  ujwal
 
